fix: bug hero img

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
     </div>
 
     <section class="hero">
-        <h1>Feliz 5 Meses Minha Princesa</h1>
-        <p>Cada dia ao seu lado é uma nova razão para sorrir</p>
-        <div class="hero-date">23 de Novembro de 2024 - 23 de Abril de 2025</div>
+        <div class="hero-bg"></div>
+        <div class="hero-content">
+            <h1>Feliz 5 Meses Minha Princesa</h1>
+            <p>Cada dia ao seu lado é uma nova razão para sorrir</p>
+            <div class="hero-date">23 de Novembro de 2024 - 23 de Abril de 2025</div>
+        </div>
     </section>
 
     <section class="counter">
