--- a/index.html
+++ b/index.html
@@ -89,46 +89,46 @@
 
             <div class="gallery-container">
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_2714.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_2714.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_2365.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_2365.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_2125.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_2125.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_1853.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_1853.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_1747.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_1747.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_1426.jpg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_1426.jpg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_0790.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_0790.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_0537.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_0537.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_0307.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_0307.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_8468.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_8468.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_8168.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_8168.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_7756.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_7756.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_6221.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_6221.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_5944.jpeg" alt="Nós juntos" loading="lazy">
+                    <img src="../assets/img/IMG_5944.jpeg" alt="Nós juntos" loading="lazy">
                 </div>
             </div>
         </div>
@@ -141,7 +141,7 @@
 
             <div class="player-container">
                 <div class="album-cover">
-                    <img src="assets/img/IMG_2714.jpeg" alt="Capa do álbum" id="album-cover">
+                    <img src="../assets/img/IMG_2714.jpeg" alt="Capa do álbum" id="album-cover">
                 </div>
 
                 <div class="track-info">
@@ -203,7 +203,7 @@
             <div class="moments-container">
                 <div class="moment-item">
                     <div class="moment-image">
-                        <img src="/assets/img/IMG_2714.jpeg" alt="Primeiro encontro">
+                        <img src="../assets/img/IMG_2714.jpeg" alt="Primeiro encontro">
                     </div>
                     <div class="moment-text">
                         <h3>Nosso Início</h3>
@@ -214,7 +214,7 @@
 
                 <div class="moment-item">
                     <div class="moment-image">
-                        <img src="/assets/img/IMG_1747.jpeg" alt="Momentos juntos">
+                        <img src="../assets/img/IMG_1747.jpeg" alt="Momentos juntos">
                     </div>
                     <div class="moment-text">
                         <h3>Nossos Sorrisos</h3>
@@ -225,7 +225,7 @@
 
                 <div class="moment-item">
                     <div class="moment-image">
-                        <img src="/assets/img/IMG_5944.jpeg" alt="Momentos especiais">
+                        <img src="../assets/img/IMG_5944.jpeg" alt="Momentos especiais">
                     </div>
                     <div class="moment-text">
                         <h3>Nossos Momentos</h3>
